apps/base/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: immich
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Immich
    gethomepage.dev/description: Photo library
    gethomepage.dev/group: Medien
    gethomepage.dev/icon: immich.png
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.org/redirect-to-https: "true"
    nginx.org/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - immich.f4mily.net
      secretName: wildcard-f4mily-net-tls
  rules:
    - host: immich.f4mily.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
